k8s/service.yml.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookclub-service
  labels:
    app: bookclub-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: bookclub-app

---
apiVersion: v1
kind: Service
metadata:
  name: bookclub-service-internal
  labels:
    app: bookclub-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: bookclub-app
